--- a/flickr-client/src/styles.css
+++ b/flickr-client/src/styles.css
@@ -2,3 +2,10 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.App-SearchResults {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
