--- a/flickr-client/src/styles.css
+++ b/flickr-client/src/styles.css
@@ -4,8 +4,31 @@
 }
 
 .App-SearchResults {
-  display: flex;
-  gap: 5px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 10px;
   margin-top: 20px;
+  width: 100%;
+  padding: 0 10px; 
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Image-Container {
+  width: 100%;
+  padding-top: 100%; /* 1:1 aspect ratio */
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.Image-Container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
